# projeto_lakehouse

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
arquitetura/: index.html
conclusao/: index.html
data/iceberg/brasileirao/metadata/: .4a094f16-0c25-41c1-8f56-678291e1ea79-m0.avro.crc  .snap-3047795377937083142-1-4a094f16-0c25-41c1-8f56-678291e1ea79.avro.crc  .v1.metadata.json.crc  4a094f16-0c25-41c1-8f56-678291e1ea79-m0.avro  snap-3047795377937083142-1-4a094f16-0c25-41c1-8f56-678291e1ea79.avro  v1.metadata.json
dataset/: index.html
delta_lake/: index.html
docs/: arquitetura.md  conclusao.md  dataset.md  delta_lake.md  iceberg.md  pipeline.md  pyspark.md
iceberg/: index.html
notebooks/: delta_lake.ipynb  iceberg.ipynb
notebooks/data/bronze/clientes/: .part-00000-f251058e-16c9-49d7-b03b-33c303db2ae9-c000.snappy.parquet.crc  .part-00001-bf562f42-45ec-4b34-bdb0-dff960700017-c000.snappy.parquet.crc  .part-00003-792de1e3-1af0-4648-892f-a59a859a6959-c000.snappy.parquet.crc  .part-00005-47c5d366-c53d-49a6-85b2-c65ef6928838-c000.snappy.parquet.crc  .part-00007-8427c605-e0da-4ac5-887d-8bbfee3247a4-c000.snappy.parquet.crc  part-00000-f251058e-16c9-49d7-b03b-33c303db2ae9-c000.snappy.parquet  part-00001-bf562f42-45ec-4b34-bdb0-dff960700017-c000.snappy.parquet  part-00003-792de1e3-1af0-4648-892f-a59a859a6959-c000.snappy.parquet  part-00005-47c5d366-c53d-49a6-85b2-c65ef6928838-c000.snappy.parquet  part-00007-8427c605-e0da-4ac5-887d-8bbfee3247a4-c000.snappy.parquet
pipeline/: index.html
pyspark/: index.html
search/: search_index.json
(+10 files in other folders)
