[project]
name = "projeto-lakehouse"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyspark (>=4.1.1,<5.0.0)",
    "delta-spark (>=4.2.0,<5.0.0)",
    "notebook (>=7.5.5,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
